2009-07-17  Corinna Vinschen  <corinna@vinschen.de>

	* globals.cc: Improve comment on R/O UNICODE_STRINGs.
	* mount.h (class fs_info): Add is_mvfs bit.
	* mount.cc (fs_info::update): Recognize MVFS remote filesystem.
	(fillout_mntent): Reorder filesystem checks for speed.  Add
	mvfs, unixfs, and sunwnfs filesystem types.
	* path.h (class path_conv): Add fs_is_mvfs method.
	* path.cc (symlink_worker): On MVFS, always create symlinks as
	Windows shortcuts.  Explain why.

2009-07-16  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (unlink_nt): First remove the R/O DOS attribute with
	FILE_WRITE_ATTRIBUTES access only, then re-open the file for DELETE.
	Explain why.

2009-07-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Remove file
	attribute check already done in NtSetAttributesFile.

2009-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* globals.cc: Reorder constant UNICODE_STRINGs for clarity.
	* mount.h (fs_info::sttaus): Move filesystem type flags into
	substructure.  Add union to allow simple test for having set any
	one filesystem type flag.  Replace has_buggy_open flag with is_sunwnfs
	flag.  Replace has_buggy_fileid_dirinfo with is_unixfs flag.
	(fs_info::got_fs): New private method.
	(fs_info::has_buggy_open): New explicit implementation.
	(fs_info::has_buggy_fileid_dirinfo): Ditto.
	* mount.cc (fs_info::update): Optimize filesystem checks for speed.
	* winsup.h (IMPLEMENT_STATUS_FLAG): Change write accessor to return
	value just set.

2009-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_netdrive.cc (GET_RESOURCE_INFO): Remove.
	(thread_netdrive): Drop GET_RESOURCE_INFO case.
	(fhandler_netdrive::exists): Use GET_RESOURCE_OPENENUM info class
	to check for existance.

2009-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_netdrive.cc (fhandler_netdrive::readdir): Remove useless
	alloca.

2009-07-15  Corinna Vinschen  <corinna@vinschen.de>
